--- a/attendance/styles.html
+++ b/attendance/styles.html
@@ -54,11 +54,11 @@
     ================================================== -->
     <header class="s-header">
 
-        <div class="header-logo">
-            <a class="site-logo" href="index.html">
-                <img src="images/logo.svg" alt="Homepage">
-            </a>
-        </div> <!-- end header-logo -->
+            <div class="header-logo">
+                    <a class="site-logo" href="index.html">
+                        <img src="images/logo.svg"  style="width:500px;height:130px;" alt="Homepage">
+                    </a>
+            </div> <!-- end header-logo -->
 
         <nav class="header-nav">
 
